[package]
name = "tickers_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.21.5" , features = ['r2d2'] }
r2d2 = "0.8.9"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4.0"
thiserror = "1.0.30"
serde = { version = "1.0", features = ["derive"] }
aws-config = "0.12.0"
aws-sdk-dynamodb = "0.12.0"
aws-types = "0.12.0"
tokio = { version = "1", features = ["full"] }
cached = "0.34.1"
